--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -17,9 +17,7 @@
     <div id="info" class="overlay">
         <a class="close-overlay" href="#"></a>
         <div class="popup">
-            <h2>{{ page.title }}
-                /
-                {{ page.year }}</h2>
+            <h2>{{ page.title }} / {{ page.year }}</h2>
             <h3>{{ page.archive_id }}</h3>
             <a class="close" href="#">×</a>
             <div class="popup-content">
