--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -12,6 +12,7 @@ $on-laptop:        1000px !default;
 
 @import 
     "partials/about",
+    "partials/buttons",
     "partials/animations",
     "partials/book",
     "partials/flex",
