--- a/_layouts/book-detail.html
+++ b/_layouts/book-detail.html
@@ -91,6 +91,7 @@
             Ich möchte gerne 1 Exemplar des Buches "{{ page.title }}" bestellen
           </textarea>
           <input type="submit" value="Bestellung absenden" class="btn">
+          <a href="#" class="btn cancel-btn">Abbrechen</a>
         </form>
         <div class="popup-copyright">
             Photograph and Copyright © by HEINER LEISKA<br>
