--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,30 +6,14 @@
     <!-- Favicons -->
     {% include favicons.html %}
   
-    <!-- Plain Description -->
+    <!-- Description -->
     <title>{{ site.title }}</title>
     <meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
     
-    
-    <!-- Google+ -->
-    <link rel="publisher" href="https://plus.google.com/{{site.googleplus}}"/>
-    <meta itemprop="name" content="{% if page.fulltitle %}{{page.fulltitle}}{% else %}{{page.title}} | {{ site.title }} {% endif %}">
-    <meta itemprop="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
-    <meta itemprop="image" content="{% if page.image %}{{site.url}}{{page.image}}{% else %}{{site.url}}{{site.socialimg}}{% endif %}">
-    
-    <!-- Facebook -->
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="{% if page.fulltitle %}{{page.fulltitle}}{% else %}{{page.title}} | {{ site.title }} {% endif %}"/>
-    <meta property="og:description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}"/>
-    <meta property="og:image" content="{% if page.image %}{{site.url}}{{page.image}}{% else %}{{site.url}}{{site.socialimg}}{% endif %}"/>
-    <meta property="og:url" content="{{site.url}}{{page.url}}"/>
-    <meta property="og:site_name" content="{{ site.title }} "/>
     <!-- CSS -->
-     
     <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css">
   
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
-  
-    <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
+
   </head>
