--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -1,314 +1,15 @@
-$primary-color: red;
-$light-grey: #ccc;
-$main-font: 'TSTAR-Regular',sans-serif;
-$bold-font: 'TSTAR-Bold',sans-serif;
-
-// Width of the content area
-$content-width:    1400px !default;
-
-$on-mobile:          600px !default;
-$on-laptop:        1000px !default;
-
-
 @import 
     "partials/about",
     "partials/buttons",
     "partials/animations",
+    "partials/layout",
     "partials/book",
+    "partials/gallery",
+    "partials/images",
     "partials/flex",
     "partials/navigation",
     "partials/forms",
-    "partials/mixins",
+    "partials/media-queries",
     "partials/popup"
 ;
-
-* {
-    //border: 1px solid $primary-color;
-    text-decoration: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    background: white;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    text-decoration: none;
-    font-family: $main-font;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.global {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-box;
-    box-orient: horizontal; //background: #789;
-    //border: 1px solid black;
-    //overflow: hidden;
-}
-
-.sidebar {
-    //border: 1px solid red;
-    position: fixed;
-    height: 100vh;
-    width: 18vw;
-    display: flex;
-    align-items: center;
-    padding-left: 3vw;
-    background: #fff;
-}
-
-.sideinfo {
-    position: absolute;
-    margin-top: 250px;
-}
-
-.sideinfo a {
-    color: $light-grey;
-}
-
-.nc-icon-wrapper {
-    fill: $light-grey;
-}
-
-.content {
-    //border: 1px solid blue;
-    //   position:relative;
-    margin-left: 19vw;
-    margin-right: 3vw;
-    max-height: 100%;
-
-    -ms-flex: 1;
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -ms-box-flex: 1;
-    box-flex: 1;
-    display: flex;
-    align-content: center;
-    box-sizing: border-box;
-    @include media-query-l($on-laptop) {
-        margin-left: 30vw;
-    }
-
-}
-
-.content#single {
-    margin-top: 8vh;
-    margin-bottom: 8vh; //align-items: center;
-    justify-content: center;
-    align-items: center;
-    justify-content: center;
-    max-width: 1000px;
-    position: relative;
-    overflow: hidden;
-}
-
-.content#overview {
-    align-items: center;
-}
-
-.container#overview {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 1rem;
-    //position: relative;
-    width: 900px;
-    //text-align: left;
-    //columns: 250px 3;
-    ///column-gap: 1rem;
-    @include media-query-p($on-laptop) {
-        grid-template-columns: auto auto;
-        align-self: flex-start;
-        margin-bottom: 2rem;    
-    }
-    @include media-query-p($on-mobile) {
-        grid-template-columns: auto;
-    }
-    @include media-query-l($on-laptop) {
-        grid-template-columns: auto auto;
-        align-self: flex-start;
-        margin-bottom: 2rem;    
-    }
-    @include media-query-l($on-mobile) {
-        grid-template-columns: auto;
-    }
-}
-
-.project-wrapper {
-    width: 300px;
-    height: 200px;
-    //display: inline;
-    //height: 100%;
-    img {
-        max-width: 100%;
-        max-height: 100%;
-        //margin: 1rem 0 0 0;
-        zoom: 2;
-        vertical-align: middle;
-    }
-}
-
-.container--single {
-    height: 100%;
-    width: 100%;
-}
-
-img.fadein {
-    -webkit-animation: fadein 2s;
-    /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 2s;
-    /* Firefox < 16 */
-    -ms-animation: fadein 2s;
-    /* Internet Explorer */
-    -o-animation: fadein 2s;
-    /* Opera < 12.1 */
-    animation: fadein 2s;
-}
-
-img.fullsize {
-    margin: auto;
-    position: absolute;
-
-    max-height: 100%;
-    max-width: 100%;
-}
-
-
-/*
-* === GALLERY ===
-*/
-
-a.gallery-next {
-    //background-color: red;
-    position: absolute;
-    width: 50%;
-    height: 100vh;
-    right: 0px;
-    cursor: e-resize;
-    z-index: 1;
-}
-
-a.gallery-prev {
-    //background-color: blue;
-    position: absolute;
-    width: 50%;
-    left: 0px;
-    height: 100vh;
-    cursor: w-resize;
-    z-index: 1;
-}
-
-.home-link {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    right: 0px;
-    cursor: pointer;
-    z-index: 1;
-}
-
-
-
-
-/*
-* === MEDIA QUERIES ===
-*/
-
-@media all and (orientation:portrait) {
-    .sidebar {
-        height: 20vh;
-        width: 100vw;
-        padding-left: 8vw;
-        padding-top: 4vh;
-        z-index: 1;
-    }
-    .content,
-    .content#single {
-        margin: 20vh 8vw 12vh 8vw;
-    }
-    .content#overview {
-        margin-top: 20vh;
-    }
-    .container#single {
-        text-align: center;
-        padding-left: 8vw;
-        padding-right: 8vw;
-    }
-    .container#overview {
-    }
-    .sideinfo {
-        position: fixed;
-        bottom: 3vh;
-    }
-    nav {
-        margin-top: 20px;
-    }
-    nav a:last-child {
-        padding-bottom: 0;
-    }
-}
-
-@media all and (max-width: 500px) and (orientation:portrait) {
-    .content#overview {
-        align-items: flex-start;
-        margin-top: 22vh;
-        margin-bottom: 0;
-    }
-}
-
-@media all and (max-height: 780px) and (orientation:portrait) {
-    .content#overview {
-        align-items: flex-start;
-        margin-bottom: 0;
-    }
-    .content#single {
-        margin-top: 23vh;
-        margin-bottom: 5rem;
-    }
-}
-
-@media all and (max-width: 930px) and (orientation:landscape) {
-    .content#overview {
-        align-items: flex-start;
-        padding-top: 3vh;
-    }
-    .popup {
-        margin: 10vh auto;
-        width: 80vw;
-    }
-}
-
-@media all and (max-height: 618px) and (max-width: 1223px) and (orientation:landscape) {
-    .content#overview {
-        align-items: flex-start;
-        padding-top: 3vh;
-    }
-}
-
-@media all and (max-height: 618px) and (orientation:landscape) {
-    .sideinfo {
-        bottom: 3vh;
-    }
-    .sidebar {
-        align-items: flex-start;
-        padding-top: 50px;
-    }
-    .content#overview {
-        padding-top: 3vh;
-        margin-right: 0;
-        padding-right: 6vw;
-        padding-left: 4vw;
-    }
-}
-
 
