--- a/_sass/partials/book.scss
+++ b/_sass/partials/book.scss
@@ -1,3 +1,5 @@
+@import "../lib/all";
+
 .content-book {
     margin-top: 8vh;
     margin-bottom: 8vh;
@@ -61,6 +63,10 @@
             max-height: 100%;
             max-width: 100%;
         }
+    }
+
+    a {
+        cursor: e-resize;
     }
 }
 
