--- a/_sass/partials/forms.scss
+++ b/_sass/partials/forms.scss
@@ -1,3 +1,5 @@
+@import "../lib/all";
+
 /*
 * === FORMS ===
 */
@@ -11,7 +13,8 @@ form {
 
 /* Full-width inputs */
 
-input,textarea {
+input[type="text"],
+textarea {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
