--- a/_sass/partials/navigation.scss
+++ b/_sass/partials/navigation.scss
@@ -1,9 +1,31 @@
-/*
-* === NAVIGATION ===
-*/
+@import "../lib/all";
+
+.sidebar {
+    //border: 1px solid red;
+    position: fixed;
+    height: 100vh;
+    width: 18vw;
+    display: flex;
+    align-items: center;
+    padding-left: 3vw;
+    background: #fff;
+}
+
+.sideinfo {
+    position: absolute;
+    margin-top: 250px;
+
+    a {
+        color: $light-grey;
+    }
+}
 
 .logo {
     height: 1.2rem;
+}
+
+.nc-icon-wrapper {
+    fill: $light-grey;
 }
 
 span.bold {
@@ -12,21 +34,21 @@ span.bold {
 
 nav {
     font-weight: 200;
-    margin-top: 50px;
+    margin-top: 4rem;
     z-index: 0;
-    font-size: 0.9rem;
-}
+    font-size: 1rem;
 
-nav a {
-    color: #000;
-    display: block;
-    padding-bottom: 1rem;
-}
+    a {
+        color: #000;
+        display: block;
+        padding-bottom: 1rem;
 
-nav a.active {
-    font-family: $bold-font;
-}
+        &.active {
+            font-family: $bold-font;
+        }
 
-nav a:hover {
-    color: $light-grey;
+        &:hover {
+            color: $light-grey;
+        }
+    }
 }
