--- a/_sass/partials/popup.scss
+++ b/_sass/partials/popup.scss
@@ -1,3 +1,5 @@
+@import "../lib/all";
+
 /*
 * === POPUP ===
 */
@@ -16,12 +18,21 @@
     visibility: hidden;
     opacity: 0;
     z-index: 2;
-}
 
-.overlay:target {
-    visibility: visible;
-    opacity: 1;
-    z-index: 2;
+    &:target {
+        visibility: visible;
+        opacity: 1;
+        z-index: 2;
+    }
+
+    .close-overlay {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        width: 100%;
+        height: 100%;
+        cursor: alias;
+    }
 }
 
 .popup {
@@ -39,66 +50,59 @@
     box-shadow: 0px 0px 60px 2px rgba(0, 0, 0, 0.2);
     z-index: 21;
     border: 1px solid #aaa;
+
+    h2 {
+        margin: 0 0 10px 0;
+        color: #333;
+        font-family: $bold-font;
+        font-size: 1.0em;
+    }
+
+    h3 {
+        margin-top: 0;
+        color: #333;
+        font-weight: 400;
+        font-size: 1em;
+    }
+
+
+    .close {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        transition: all 200ms;
+        font-size: 1.5em;
+        text-decoration: none;
+        color: #333;
+
+        &:hover {
+            color: #999;
+        }
+    }
+
+    .popup-content {
+        max-height: 30%;
+        overflow: auto;
+        font-weight: 200;
+        font-size: 1em;
+    }
+
+    .popup-price {
+        width: 100%;
+        margin: 30px 0;
+        max-height: 30%;
+        overflow: auto;
+        font-weight: 400;
+        font-size: 1em;
+
+        .right {
+            margin: 10px 0;
+            width: 100%;
+            text-align: left;
+        }
+    }
 }
 
-.popup h2 {
-    margin: 0 0 10px 0;
-    color: #333;
-    font-family: $bold-font;
-    font-size: 1.0em;
-}
-
-.popup h3 {
-    margin-top: 0;
-    color: #333;
-    font-weight: 400;
-    font-size: 1em;
-}
-
-.overlay .close-overlay {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    width: 100%;
-    height: 100%;
-    cursor: alias;
-}
-
-.popup .close {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    transition: all 200ms;
-    font-size: 1.5em;
-    text-decoration: none;
-    color: #333;
-}
-
-.popup .close:hover {
-    color: #999;
-}
-
-.popup .popup-content {
-    max-height: 30%;
-    overflow: auto;
-    font-weight: 200;
-    font-size: 1em;
-}
-
-.popup .popup-price {
-    width: 100%;
-    margin: 30px 0;
-    max-height: 30%;
-    overflow: auto;
-    font-weight: 400;
-    font-size: 1em;
-}
-
-.popup .popup-price div.right {
-    margin: 10px 0;
-    width: 100%;
-    text-align: left;
-}
 
 .popup-copyright {
     font-size: 0.8em;
