--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,9 +8,7 @@
 <body>
   {% include header.html %}
 
-<div class="content" id="overview">
-
-
+<div class="content content-center">
 
     <div class="container">
       <div class="flex-container">
