--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -3,6 +3,7 @@
     "partials/buttons",
     "partials/animations",
     "partials/layout",
+    "partials/tables",
     "partials/book",
     "partials/gallery",
     "partials/images",
