--- a/_layouts/book-detail.html
+++ b/_layouts/book-detail.html
@@ -40,8 +40,8 @@
 
         </div>
 
-        <div class="book-details">
-          <div class="detail-column">
+        <div class="flex-container">
+          <div class="flex-column">
               {{page.de.title}}<br>
               {{page.de.cover}}<br>
               {{page.de.pages}}<br>
@@ -56,7 +56,7 @@
               <a href="#order" class="btn">Buch bestellen</a>
             
           </div>
-          <div class="detail-column">
+          <div class="flex-column">
               {{page.en.title}}<br>
               {{page.en.cover}}<br>
               {{page.en.pages}}<br>
