--- a/_sass/partials/book.scss
+++ b/_sass/partials/book.scss
@@ -4,9 +4,9 @@
     margin-top: 8vh;
     margin-bottom: 8vh;
     flex-direction: column;
-    max-width: 1000px;
+    max-width: 100%;
+    width: 1000px;
     position: relative;
-    overflow: hidden;
     justify-content: center;
 
     @media all and 
@@ -15,6 +15,10 @@
         justify-content: flex-start;
         margin-top: 12rem;
     }
+}
+
+.book-wrapper {
+    max-width: 100%;
 }
 
 .book-details {
@@ -37,8 +41,9 @@
 
 .slides-container {
     position: relative;
-    height: 40vh;
+    height: 40vmin;
     margin-bottom: 5rem;
+    max-width: 100%;
 
     .slide {
         height: 100%;
