--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -23,28 +23,111 @@
             <div class="popup-content">
                 {{ page.description }}
             </div>
-            <div class="popup-price">
-                {{ page.print }}
-                <div class="right">{{ page.price }}
-                    €
-                    <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="17" height="17" viewBox="0 0 512 512">
-                            <g class="nc-icon-wrapper">
-                                <path d="M160 400c-13.248 0-24 10.752-24 24s10.752 24 24 24 24-10.752 24-24-10.752-24-24-24z"></path>
-                                <path d="M384.5 400c-13.248 0-24 10.752-24 24s10.752 24 24 24 24-10.752 24-24-10.752-24-24-24z"></path>
-                                <path d="M448 128L123.177 95.646c-1.628-6.972-4.369-14.66-11.838-20.667C102.025 67.489 86.982 64 64 64v16.001c18.614 0 31.167 2.506 37.312 7.447 4.458 3.585 5.644 8.423 7.165 15.989l-.024.004 42.052 233.638c2.413 14.422 7.194 25.209 13.291 32.986C171.043 379.312 180.533 384 192 384h240v-16H192c-4.727 0-19.136.123-25.749-33.755l-5.429-30.16L432 256l16-128z"></path>
-                            </g>
-                        </svg>
-                    </a>
+            <div class="popup-price" style="width: 100%, display: flex">
+                {% for print in page.prints %}
+                <div  style="width: 100%; display: flex; justify-content: space-between">
+                    <span>{{ print.title }}</span>
+                    <span>{{ print.price }},00 €</span>
                 </div>
+                {% endfor %}
             </div>
+           <div>
+                Lieferung erfolgt ungerahmt in Versandrolle.<br> 
+                Rahmung auf Anfrage.<br>
+                Zahlung auf Vorkasse.<br>
+                <a href="#order-de" class="btn">Druck bestellen</a>
+                <a href="#order-en" class="btn">Order Print</a>
+           </div>
             <div class="popup-copyright">
+
                 Photograph and Copyright © by HEINER LEISKA<br>
                 Not to be reproduced in any form without written permission of the photographer
             </div>
 
         </div>
     </div>
+
+    <div id="order-de" class="overlay">
+            <a class="close-overlay" href="#"></a>
+            <div class="popup">
+                    <a class="close" href="#info">×</a>
+                <form action="https://formspree.io/mkitzmann@gmail.com" method="POST">
+                    <input type="hidden" name="_subject" value="Neue Bestellung für das Buch {{ page.title }}" />
+                    <input type="hidden" name="_next" value="http://localhost:4000/books/cake/#thankyou" />
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="_replyto" placeholder="mail@example.com">
+                    <label for="email">Anschrift</label>
+                    <input type="text" id="email" name="_replyto" placeholder="Musterstraße 2, 22765 Hamburg">
+                    <label for="print">Ausführung</label>
+                    <select name="print" id="print">
+                        {% for print in page.prints %}
+                            <option value="{{ print.title }}">{{ print.title }}, {{ print.price | append: ",00 €" }}</option>
+                        {% endfor %}
+                    </select>
+                    <label for="order">Bestellung</label>
+                    <textarea id="order" name="order">Ich bestelle 1 Exemplar des Bildes "{{ page.title }}" in der oben ausgewählten Ausführung.
+Lieferung bitte an Rechnungsanschrift. 
+                    </textarea>
+                    Lieferung erfolgt ungerahmt in Versandrolle.<br> 
+                    Rahmung auf Anfrage.<br>
+                    Zahlung auf Vorkasse.<br>
+
+                    <input type="submit" value="Bestellung absenden" class="btn">
+                    <a href="#info" class="btn cancel-btn">Abbrechen</a><br>
+
+                </form>
+                
+                <div class="popup-copyright">
+                    Photograph and Copyright © by HEINER LEISKA<br>
+                    Not to be reproduced in any form without written permission of the photographer
+                </div>
+    
+            </div>
+        </div>
+
+
+        <div id="order-en" class="overlay">
+                <a class="close-overlay" href="#"></a>
+                <div class="popup">
+                        <a class="close" href="#info">×</a>
+                    <form action="https://formspree.io/mkitzmann@gmail.com" method="POST">
+                        <input type="hidden" name="_subject" value="Neue Bestellung für das Buch {{ page.title }}" />
+                        <input type="hidden" name="_next" value="http://localhost:4000/books/cake/#thankyou" />
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Name">
+                        <label for="email">Email</label>
+                        <input type="text" id="email" name="_replyto" placeholder="mail@example.com">
+                        <label for="email">Address</label>
+                        <input type="text" id="email" name="_replyto" placeholder="Musterstraße 2, 22765 Hamburg">
+                        <label for="print">Print</label>
+                        <select name="print" id="print">
+                            {% for print in page.prints %}
+                                <option value="{{ print.title }}">{{ print.title }}, {{ print.price | replace: '.',',' | append: ".00 €" }}</option>
+                            {% endfor %}
+                        </select>
+                        <label for="order">Order</label>
+                        <textarea id="order" name="order">Hereby I order one print of the "{{ page.title }}" in the aforementioned size.
+    Delivery to Invoice Address.
+                        </textarea>
+                        Lieferung erfolgt ungerahmt in Versandrolle.<br> 
+                        Rahmung auf Anfrage.<br>
+                        Zahlung auf Vorkasse.<br>
+    
+                        <input type="submit" value="Bestellung absenden" class="btn">
+                        <a href="#info" class="btn cancel-btn">Abbrechen</a><br>
+    
+                    </form>
+                    
+                    <div class="popup-copyright">
+                        Photograph and Copyright © by HEINER LEISKA<br>
+                        Not to be reproduced in any form without written permission of the photographer
+                    </div>
+        
+                </div>
+            </div>
+
 
   </div>
 
