--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -9,8 +9,8 @@
 
 html,
 body {
-    background: white;
     height: 100%;
+    width: 100%;
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -22,38 +22,55 @@ body {
     font-size: 15px;
 }
 
-.global {
+body {
+    background: white;
+}
+
+.sidebar {
+    position: fixed;
+    width: 18vw;
     display: flex;
-    height: 100%;
-    width: 100%;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-box;
-    box-orient: horizontal;
+    align-items: center;
+    padding-left: 3vw;
+    background: #fff;
+    top: 0;
+    bottom: 0;
+
+    @include media-query-portrait-only() {
+        height: 25vh;
+        width: 100%;
+        padding-left: 8vw;
+        padding-top: 2vh;
+        z-index: 12;
+    }
+
 }
 
 .content {
+    background-color: red;
     margin-left: 19vw;
     margin-right: 3vw;
-    max-height: 100%;
-    width: 1200px;
-    max-width: 100%;
+    width: 100%;
+    padding: 3vw 0;
+    max-width: 1200px;
     display: flex;
-    align-content: center;
     box-sizing: border-box;
+
+    @include media-query-portrait-only() {
+        padding: 0 8vw;
+        margin-left: 0;
+        margin-top: 25vh;
+        height: 5vh;
+    }
+
     @include media-query-l($on-laptop) {
         margin-left: 30vw;
     }
-
 }
 
 .content-center{
     align-items: center;
-
-    @include media-query-p($on-laptop) {
-        align-items: flex-start;
-    }
+    min-height: 100%;
 }
 
 .content#single {
@@ -76,23 +93,6 @@ body {
     width: 1000px;
     max-width: 100%;
     justify-content: center;
-
-    @include media-query-p($on-laptop) {
-
-        align-self: flex-start;
-        margin-bottom: 2rem;    
-    }
-    @include media-query-p($on-mobile) {
-
-    }
-    @include media-query-l($on-laptop) {
-
-        align-self: flex-start;
-        margin-bottom: 2rem;    
-    }
-    @include media-query-l($on-mobile) {
-
-    }
 }
 
 
