--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
    
-    <div class="sidebar">
+<div class="sidebar">
     <div class="navigation">
         <a href="/" class="logo"><img src="/img/heinerleiska-logo.svg" class="logo"></a>
         <nav class="main">
@@ -69,3 +69,7 @@
 
     
 </div>
+
+
+<div class="content">
+
