--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@
 <body>
   {% include header.html %}
 
-<div class="content content-center">
+  <div class="vertical-center">
 
     <div class="container">
       <div class="flex-container">
@@ -30,7 +30,8 @@
       </div>
 
     </div>
-</div>
+  </div>
+
 
 
 
