--- a/_layouts/books-list.html
+++ b/_layouts/books-list.html
@@ -8,11 +8,8 @@
 <body>
   {% include header.html %}
 
-<div class="content" id="overview">
-
-
-
-    <div class="container" id="overview">
+  <div class="vertical-center">
+    <div class="container-list">
         {% for book in site.books %}
           
           <a href="{{ book.url }}" class="project-wrapper">
