--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -67,7 +67,7 @@ body {
         padding: 4vh 8vw 0;
         margin-left: 0;
         margin-top:25vh;
-        margin-bottom: 25vh;
+        margin-bottom: 20vh;
         width: auto;
     }
 
@@ -85,7 +85,7 @@ body {
 .container-list {
     display: flex;
     flex-wrap: wrap;
-    max-width: 100%;
+    max-width: 90%;
     justify-content: center;
 }
 
@@ -95,6 +95,8 @@ body {
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
+    max-height: 1200px;
 
     img {
         position: absolute;
