Change Navigation Order

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   
     <!-- Description -->
     <title>{{ site.title }}</title>
-    <meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
+    <meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.description}}{% endif %}">
     
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css">
