Moritz seine Basteleien

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,20 +6,19 @@
 
             <a href="/photography/" 
             {% if page.url contains "photography" %}
-            class="active"
+            	class="active"
             {% endif %}
             >Photographs</a>
             <a href="/books/"
             {% if page.url contains "books" %}
                 class="active"
             {% endif %}
-            >
-                Books</a>
+            >Books</a>
             <a href="/about/"
             {% if page.url contains "about" %}
-            class="active"
-            {% endif %}>
-                About</a>
+            	class="active"
+            {% endif %}
+            >About</a>
         </nav>
     </div>
 
