--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,9 @@
 <body>
   {% include header.html %}
 
-  <div class="content" id="single">
+  <div class="container-detail">
     <a href="/photography/" class="home-link"></a>
-     <img class="fullsize fadein" src="{{ page.image }}">
+     <img class="fadein" src="{{ page.image }}">
 </div>
 
   {% include footer.html %}
