--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
     <!-- Favicons -->
-    {% include favicons.html %}
+    <!-- {% include favicons.html %} -->
   
     <!-- Description -->
     <title>{{ site.title }}</title>
