--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -36,9 +36,9 @@
            <div>
                 Lieferung erfolgt ungerahmt in Versandrolle.<br> 
                 Rahmung auf Anfrage.<br>
-                Zahlung auf Vorkasse.<br>
-                <a href="#order-de" class="btn">Druck bestellen</a>
-                <a href="#order-en" class="btn">Order Print</a>
+                Gegen Vorkasse.<br>
+                <a href="#order-de" class="btn">Bestellen</a>
+                <a href="#order-en" class="btn">Order</a>
            </div>
             <div class="popup-copyright">
 
@@ -58,7 +58,7 @@
                     <input type="hidden" name="_next" value="http://localhost:4000/books/cake/#thankyou" />
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Name">
-                    <label for="email">Email</label>
+                    <label for="email">E-Mail</label>
                     <input type="text" id="email" name="_replyto" placeholder="mail@example.com">
                     <label for="email">Anschrift</label>
                     <input type="text" id="email" name="_replyto" placeholder="Musterstraße 2, 22765 Hamburg">
@@ -74,7 +74,7 @@ Lieferung bitte an Rechnungsanschrift.
                     </textarea>
                     Lieferung erfolgt ungerahmt in Versandrolle.<br> 
                     Rahmung auf Anfrage.<br>
-                    Zahlung auf Vorkasse.<br>
+                    Gegen Vorkasse.<br>
 
                     <input type="submit" value="Bestellung absenden" class="btn">
                     <a href="#info" class="btn cancel-btn">Abbrechen</a><br>
@@ -117,8 +117,8 @@ Lieferung bitte an Rechnungsanschrift.
                         Rahmung auf Anfrage.<br>
                         Zahlung auf Vorkasse.<br>
     
-                        <input type="submit" value="Bestellung absenden" class="btn">
-                        <a href="#info" class="btn cancel-btn">Abbrechen</a><br>
+                        <input type="submit" value="Order" class="btn">
+                        <a href="#info" class="btn cancel-btn">Cancel</a><br>
     
                     </form>
                     
