Add Fadeout Animation

--- a/_sass/partials/animations.scss
+++ b/_sass/partials/animations.scss
@@ -56,3 +56,12 @@
         opacity: 1;
     }
 }
+
+@keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
