--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -11,7 +11,7 @@
   <a href="{{ page.previous.url | default: site[page.collection].last.url }}" class="gallery-prev"></a>
   <a href="{{ page.next.url | default: site[page.collection].first.url  }}" class="gallery-next"></a>
   <div class="container-detail">
-    <img class="fadein" src="{{ page.image }}">
+    <img class="fadein" id="fadeout" src="{{ page.image }}">
   </div>
 
 
