Ein paar Daten ergänzt

--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -99,7 +99,7 @@ Lieferung bitte an Rechnungsanschrift.
                         <label for="email">Email</label>
                         <input type="text" id="email" name="_replyto" placeholder="mail@example.com">
                         <label for="email">Address</label>
-                        <input type="text" id="email" name="_replyto" placeholder="Musterstraße 2, 22765 Hamburg">
+                        <input type="text" id="email" name="_replyto" placeholder="Musterstraße 1, 12345 Musterstadt">
                         <label for="print">Print</label>
                         <select name="print" id="print">
                             {% for print in page.prints %}
@@ -111,8 +111,8 @@ Lieferung bitte an Rechnungsanschrift.
     Delivery to Invoice Address.
                         </textarea>
                         Lieferung erfolgt ungerahmt in Versandrolle.<br> 
-                        Rahmung auf Anfrage.<br>
-                        Zahlung auf Vorkasse.<br>
+                        Framing or mapping on request.<br>
+                        Payment in advance.<br>
     
                         <input type="submit" value="Order" class="btn">
                         <a href="#info" class="btn cancel-btn">Cancel</a><br>
