--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css">
   
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
+    <link href="/assets/fonts/TSTAR-Bold.css" rel="stylesheet">
+    <link href="/assets/fonts/TSTAR-Regular.css" rel="stylesheet">
+    <link href="/assets/fonts/TSTAR-Heavy.css" rel="stylesheet">
+    <link href="/assets/fonts/TSTAR-Italic.css" rel="stylesheet">
 
   </head>
