Fix gallery fadeout

--- a/_sass/partials/images.scss
+++ b/_sass/partials/images.scss
@@ -14,6 +14,7 @@
 }
 
 .fadeout {
+    opacity: 0;
     -webkit-animation: fadeout 500ms;
     /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadeout 500ms;
