--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -10,7 +10,8 @@
 
   <a href="{{ page.previous.url | default: site[page.collection].last.url }}" class="gallery-prev"></a>
   <a href="{{ page.next.url | default: site[page.collection].first.url  }}" class="gallery-next"></a>
-  <div class="container-detail">
+  <div class="container-detail"             
+  style="background:url({{ page.next.image }}) no-repeat -9999px -9999px">
     <img class="fadein" id="fadeout" src="{{ page.image }}">
   </div>
 
