Variable vorbereitet - wie aufrufen?

--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -14,8 +14,6 @@
     <img class="fadein" id="fadeout" src="{{ page.image }}">
   </div>
 
-
-
     <div id="info" class="overlay">
         <a class="close-overlay" href="#"></a>
         <div class="popup">
@@ -40,7 +38,7 @@
                 <a href="#order-en" class="btn">Order</a>
            </div>
             <div class="popup-copyright">
-                Photograph © by HEINER LEISKA<br>
+                Photograph and © by HEINER LEISKA<br>
             </div>
 
         </div>
@@ -66,10 +64,10 @@
                         {% endfor %}
                     </select>
                     <label for="order">Bestellung</label>
-                    <textarea id="order" name="order">Ich bestelle 1 Exemplar des Bildes "{{ page.title }}" in der gewählten Ausführung.
-Lieferung bitte an Rechnungsanschrift. 
+                    <textarea id="order" name="order">Ich bestelle das Bild "{{ page.title }}" in der gewählten Ausführung.
+Lieferung bitte an: Rechnungsanschrift. 
                     </textarea>
-                    Lieferung erfolgt ungerahmt in Versandrolle.<br> 
+                    Lieferung des Drucks in stabiler Versandrolle.<br> 
                     Rahmung auf Anfrage.<br>
                     Gegen Vorkasse.<br>
 
@@ -80,7 +78,6 @@ Lieferung bitte an Rechnungsanschrift.
                 
                 <div class="popup-copyright">
                     Photograph and Copyright © by HEINER LEISKA<br>
-                    Not to be reproduced in any form without written permission of the photographer
                 </div>
     
             </div>
