--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -34,7 +34,7 @@
             </div>
            <div>
                 Archival pigment print<br>
-                Signed on verso, plus extra certificate<br><br>
+                Certificate and signed on verso<br><br>
                 <a href="#order-de" class="btn">Bestellen</a>
                 <a href="#order-en" class="btn">Order</a>
            </div>
