--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -10,6 +10,7 @@
     "partials/flex",
     "partials/navigation",
     "partials/forms",
+    "partials/spinners",
     "partials/slider",
     "partials/popup"
 ;
