--- a/_sass/partials/images.scss
+++ b/_sass/partials/images.scss
@@ -2,6 +2,7 @@
 
 
 .fadein {
+    opacity: 1;
     -webkit-animation: fadein 2s;
     /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 2s;
