--- a/_sass/partials/layout.scss
+++ b/_sass/partials/layout.scss
@@ -60,14 +60,14 @@ body {
     display: block;
     margin-left: 19vw;
     max-width: 1200px;
-    padding: 4vw;
+    padding: 6vh 6vw;
     box-sizing: border-box;
 
     @include media-query-portrait-only() {
-        padding: 4vh 8vw 0;
+        padding: 1vh 8vw 0;
         margin-left: 0;
         margin-top:25vh;
-        margin-bottom: 20vh;
+        margin-bottom: 19vh;
         width: auto;
     }
 
@@ -85,7 +85,7 @@ body {
 .container-list {
     display: flex;
     flex-wrap: wrap;
-    max-width: 90%;
+    max-width: 100%;
     justify-content: center;
 }
 
